...
                              SizedBox(
                                width: 10,
                              ),
                              Column(
                                children: <Widget>[
                                  SizedBox(height: 5),
                                  Text('Squat',
                                      style: TextStyle(
                                          fontFamily: 'Open',
                                          color: Colors.white,
                                          fontSize: 20)),
                                  SizedBox(height: 5),
                                  Text('440.925',
...
                              SizedBox(
                                width: 10,
                              ),
                              Column(
                                children: <Widget>[
                                  SizedBox(height: 5),
                                  Text('Bench',
                                      style: TextStyle(
                                          fontFamily: 'Open',
                                          color: Colors.white,
                                          fontSize: 20)),
                                  SizedBox(height: 5),
                                  Text('300',
...
                              SizedBox(
                                width: 10,
                              ),
                              Column(
                                children: <Widget>[
                                  SizedBox(height: 5),
                                  Text('Deadlift',
                                      style: TextStyle(
                                          fontFamily: 'Open',
                                          color: Colors.white,
                                          fontSize: 20)),
                                  SizedBox(height: 5),
                                  Text('500 LB',
...
                    )),
                SizedBox(height: 60),
                Row(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: <Widget>[
                    Container(
                        key: Key('tut'),
                        height: 60,
                        width: 60,
                        decoration: BoxDecoration(
                            color: Colors.red,
                            borderRadius:
                                BorderRadius.all(Radius.circular(35))),
...
                        width: 60,
                        decoration: BoxDecoration(
                            color: Colors.red,
                            borderRadius:
                                BorderRadius.all(Radius.circular(35))),
                        child: IconButton(
                            key: Key("program"),
                            onPressed: () {
                              Navigator.of(context).push(MaterialPageRoute(
                                  builder: (context) => ProgramScreen()));
                            },
                            icon: Icon(Icons.computer),
                            iconSize: 40)),
...
                        width: 60,
                        decoration: BoxDecoration(
                            color: Colors.red,
                            borderRadius:
                                BorderRadius.all(Radius.circular(35))),
                        child: IconButton(
                          key: Key('recordbtn'),
                          onPressed: () {
                            Navigator.of(context).push(MaterialPageRoute(
                                builder: (context) => RecordScreen()));
                          },
                          icon: Icon(Icons.camera_alt),
                          iconSize: 40,
...
                        width: 60,
                        decoration: BoxDecoration(
                            color: Colors.red,
                            borderRadius:
                                BorderRadius.all(Radius.circular(35))),
                        child: IconButton(
                          key: Key('weightconvertbtn'),
                          onPressed: () {
                            Navigator.of(context).push(MaterialPageRoute(
                                builder: (context) => ConvertScreen()));
                          },
                          icon: Icon(Icons.fitness_center),
                          iconSize: 40,
...
                        width: 60,
                        decoration: BoxDecoration(
                            color: Colors.red,
                            borderRadius:
                                BorderRadius.all(Radius.circular(35))),
                        child: IconButton(
                          key: Key('Accountbtn'),
                          onPressed: () {
                            Navigator.of(context).push(MaterialPageRoute(
                                builder: (context) => AccountScreen()));
                          },
                          icon: Icon(Icons.account_box),
                          iconSize: 40,
...
                          FirebaseAuth.instance.signOut();
                          Navigator.of(context).push(MaterialPageRoute(
                              builder: ((context) => MainPage())));
                        },
                        child: Text(
                          'Sign Out',
                          key: Key('Sign-Out'),
                          style: TextStyle(
                              color: Colors.white, fontFamily: 'Open'),
                        ))),
              ],
            ),
          )),
...
